<resources>
    <string name="app_name">BloodBankProoject</string>
    <string name="person">Please click on the name to know the details of the person</string>
    <string name="UName">UserName</string>
    <string name="pword">Password</string>
    <string name="request">Make Request</string>
    <string name="msgg">Sent Message</string>
    <string name="name">Name</string>
    <string name="RePass">Retype Password</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="dd">Donor Detail</string>
    <string name="account">No Account yet? Create one</string>
    <string name="fp">forget Password?</string>
    <string name="phone">Mobile Number</string>
    <string name="line"> Your Details will be public to the community,by using this you also need to plege to be a donor to help those who are in need</string>

    <string name="Sbloodg">Select BloodGroup</string>
    <string-array name="blood_group1">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

</resources>
